# emissions_harmonization_historical

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/global/gcb/: Global_Carbon_Budget_2023v1.1.xlsx
data/global/other/: global_trajectories.xlsx
data/national/ceds/data_aux/: sector_mapping.xlsx
data/national/ceds/data_raw/: README.txt
data/national/ceds/processed/: README.txt
data/national/gfed/data_aux/: BC-em-openburning_input4MIPs_emissions_CMIP_REMIND-MAGPIE-SSP5-34-OS-V1_gn_201501-210012.nc  GFED4_Emission_Factors.txt  GFED4_Emission_Factors.xlsx  NMVOC-species.xlsx  iso_mask.nc
data/national/gfed/data_raw/: README.txt
data/national/gfed/processed/: README.txt
emissions_harmonization_historical/: __init__.py  ceds.py
emissions_harmonization_historical/tests/: __init__.py
notebooks/: 0101_CEDS-prepare.py  0102_GFED4-prepare.py
src/emissions_harmonization_historical/: gfed.py
