[tool.poetry]
package-mode = false
name = "prototype"
version = "0.1.0"
description = "Scripts that combine historical emissions data records from several datasets like CEDS and GFED to create complete historical emissions files that are input to the IAM emissions harmonization algorithms in `IAMconsortium/concordia` (regional harmonization and spatial gridding for ESMs) and `iiasa/climate-assessment` (global climate emulator workflow)."
authors = ["Jarmo S. Kikstra <kikstra@iiasa.ac.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "3.3.1"
notebook = "7.0.6"
jupytext = "1.15.2"


[tool.jupytext]
formats = "ipynb,py:percent"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "PL",
    "TRY",
    "NPY",
    "RUF",
    "UP",
    "S",
]
unfixable = [ ]
ignore = [
    "D200",
    "D400",
    "UP007",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
